welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:13: error: ':' expected but ')' found.
	def faireV(c) {
                    ^MethodsPicture:37: error: identifier expected but '}' found.
}
^MethodsPicture:72: error: Unmatched closing brace '}' ignored here
}
^